--- a/justSaid_project-main/justSaid_project/justSaid_web/templates/blog_detail.html
+++ b/justSaid_project-main/justSaid_project/justSaid_web/templates/blog_detail.html
@@ -19,7 +19,7 @@ post auther : {{ post.author.id }}
 
 <hr>
 <br/>
-{{ post.body }} <!-- {{ post.body }} safe ใช้HTMLได้-->
+{{ post.body|safe}} <!-- {{ post.body }} safe ใช้HTMLได้-->
 <br/><br/>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 
